# AnimeCore

./: .gitignore  CMakeLists.txt  Structure.md
include/common/config/: Config.h
include/common/logger/: Logger.h
include/common/metrics/: Metrics.h  MetricsReporter.h
include/network/: Connection.h  TcpServer.h
include/network/buffer/: RecvBuffer.h
include/network/protocol/: ClientPacket.h  ClientPacketParser.h  IMessage.h  InternalPacket.h  InternalPacketParser.h  MessageId.h  PacketParser.h  ProtoMessage.h
include/network/session/: Session.h  SessionManager.h
src/common/config/: Config.cpp
src/common/logger/: Logger.cpp
src/common/metrics/: Metrics.cpp  MetricsReporter.cpp
src/network/: Connection.cpp  TcpServer.cpp
src/network/buffer/: RecvBuffer.cpp
src/network/protocol/: ClientPacket.cpp  ClientPacketParser.cpp  InternalPacket.cpp  InternalPacketParser.cpp
src/network/session/: Session.cpp  SessionManager.cpp
